# computer-simulator

./: Cargo.toml  index.html
src/: components.rs  main.rs  utils.rs
src/components/: data_memory.rs  display.rs  mode_radio.rs  process_buttons.rs  program_counter.rs  program_memory.rs  register.rs
src/utils/: exec_utils.rs
