[package]
name = "computer-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
wasm-bindgen = "0.2.80"

[dependencies.web-sys]
version = "0.3"
# We need to enable the `DomRect` feature in order to use the
# `get_bounding_client_rect` method.
features = [
    "HtmlElement",
    "HtmlCollection",
    "MouseEvent",
    "DomRect",
    "StyleSheet",
    "StyleSheetList"
]